# tor

./: README.md  pyproject.toml
src/tor/: tensor.py
tests/: conftest.py  test_tensor.py  test_tensor_binary_op.py  test_tensor_indexing.py  test_tensor_repr.py  test_tensor_reshape.py  test_tensor_size.py  test_tensor_slicing.py  test_tensor_tolist.py  test_tensor_unary_op.py
