[project]
name = "tor"
version = "0.1.0"
description = "Mini version of pytorch"
readme = "README.md"
requires-python = ">=3.14"
dependencies = []

[project.urls]
Repository = "https://github.com/damphat/tor.git"
"Bug Tracker" = "https://github.com/damphat/tor/issues"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
